Get IGDB Metadata

--- a/GameLauncherAdmin/Views/ShellPage.xaml
+++ b/GameLauncherAdmin/Views/ShellPage.xaml
@@ -43,11 +43,11 @@
                 TODO: Update item icons by updating FontIcon.Glyph properties.
                 https://docs.microsoft.com/windows/apps/design/style/segoe-fluent-icons-font#icon-list
                 -->
-                <!--<NavigationViewItem x:Uid="Shell_Main" helpers:NavigationHelper.NavigateTo="GameLauncherAdmin.ViewModels.MainViewModel">
+                <NavigationViewItem x:Uid="Shell_Main" helpers:NavigationHelper.NavigateTo="GameLauncherAdmin.ViewModels.MainViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe7c3;"/>
                     </NavigationViewItem.Icon>
-                </NavigationViewItem>-->
+                </NavigationViewItem>
                 <NavigationViewItem x:Uid="Shell_Bibliotheque" helpers:NavigationHelper.NavigateTo="GameLauncherAdmin.ViewModels.BibliothequeViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xf0e2;"/>
